Aplicando CSS e criando uma página de vendas

--- a/semana1/sistema-loja/adicionar.html
+++ b/semana1/sistema-loja/adicionar.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="home.html">Home</a>
-    <a href="estoque.html">Estoque</a>
-    <a href="funcionarios.html">Funcionários</a> 
+    <div class="cabecalho">
+        <a href="home.html">Home</a>
+        <a href="estoque.html">Estoque</a>
+        <a href="funcionarios.html">Funcionários</a> 
+    </div>
+ 
     <h1>Adicionar Produto</h1>
     <form action="">
         <label for="foto">Foto</label>
@@ -29,5 +33,11 @@
         <br>
         <button type="submit">ENVIAR</button>
     </form>
+
+    <div class="rodape">
+        <p>contato@email.com</p>
+        <p>Telefone: (01) 2345-6789</p>
+        <p>Copyright</p>
+    </div>
 </body>
 </html>
