--- a/semana1/sistema-loja/home.html
+++ b/semana1/sistema-loja/home.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="cabecalho">
+        <a href="adicionar.html">Adicionar Produto</a>
+        <a href="estoque.html">Estoque</a>
+        <a href="funcionarios.html">Funcionários</a> 
+    </div>
+
     <h2>Loja de "Coronveniências"</h2>
     <p>Seja bem vindo(a)!</p>
     <ul>
@@ -14,5 +21,11 @@
         <li><a href="adicionar.html">Adicionar Produto</a></li>
         <li><a href="funcionarios.html">Funcionários</a></li>
     </ul>
+    
+    <div class="rodape">
+        <p>contato@email.com</p>
+        <p>Telefone: (01) 2345-6789</p>
+        <p>Copyright</p>
+    </div>
 </body>
 </html>
