--- a/semana1/sistema-loja/funcionarios.html
+++ b/semana1/sistema-loja/funcionarios.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funcionários</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="home.html">Home</a>
-    <a href="adicionar.html">Adicionar Produto</a>
-    <a href="estoque.html">Estoque</a> 
+    <div class="cabecalho">
+        <a href="home.html">Home</a>
+        <a href="adicionar.html">Adicionar Produto</a>
+        <a href="estoque.html">Estoque</a>
+    </div>
+ 
     <h1>Funcionários</h1>
     <ul>
         <li><b>Genebildo</b>, 05/08/1985</li>
@@ -17,5 +21,11 @@
         <li><b>Crewza</b>, 25/10/1981</li>
         <li><b>Jobson</b>, 08/06/1990</li>
     </ul>
+
+    <div class="rodape">
+        <p>contato@email.com</p>
+        <p>Telefone: (01) 2345-6789</p>
+        <p>Copyright</p>
+    </div>
 </body>
 </html>
