--- a/semana1/portfolio/about.html
+++ b/semana1/portfolio/about.html
@@ -12,30 +12,41 @@
         <a href="portfolio.html">Portfolio</a>
         <a href="contato.html">Contato</a>
     </div>
-    <h1>Sobre mim</h1>
-    <p>Texto sobre quem eu sou</p>
-    <ul>
-        Currículo
-        <li>UFPR</li>
-        <li>UTFPR</li>
-        <li>Souza Lima</li>
-        <li>Future4</li>
-        <li>Professor de música (autônomo)</li>
-    </ul>
-    <dl>
-        Habilidades:
-        <dt>HTML e CSS</dt>
-        <dd>Criação e estilização de páginas simples (ainda estou na primeira semana de aula!)</dd>
-        <dt></dt>
-        <dd></dd>
-        <dt></dt>
-        <dd></dd>
-    </dl>
+    
+    <div class="about">
+        <h1>Sobre mim</h1>
+        <p>Meu nome é Artur, tenho 29 anos e sou de Curitiba, Paraná. 
+            Antes de iniciar na Future4 trabalhei como músico e professor de música. 
+            Resolvi ir pra área de programação porque sempre gostei de computadores e tecnologia.
+            No meu tempo livro gosto de jogar videogames e aprender sobre produção musical.</p>
+
+        <h2>Currículo:</h2>     
+        <ul>
+            <li>Produção Sonora (UFPR, incompleto)</li>
+            <li>Eng. Industrial Mecânica (UTFPR, incompleto)</li>
+            <li>Bacharelado em Música (Souza Lima)</li>
+            <li>Desenvolvimento Web (Future4)</li>
+            <li>Professor de música (autônomo)</li>
+        </ul>
+
+        <h2>Habilidades:</h2>
+        <dl>
+            <dt><strong>HTML e CSS</strong></dt>
+            <dd>Criação e estilização de páginas simples (ainda estou na primeira semana de aula!)</dd>
+            <br>
+            <dt><strong>Lidar com as dificuldades</strong></dt>
+            <dd>Consigo manter a calma quando surgem dificuldades e quando estou sob pressão</dd>
+            <br>
+            <dt><strong>Persistência</strong></dt>
+            <dd>Quando encontro algum problema no meu programa sempre tento resolvê-lo de várias formas antes de pedir ajuda</dd>
+        </dl>
+    </div>
+
     <div class="rodape">
-        <p>email</p>
-        <p>telefone</p>
-        <p>github</p>
-        <p>copywrite</p>
+        <p>artur.candelori@hotmail.com</p>
+        <p>(41)99272-1210</p>
+        <p><a href="https://github.com/future4code/Artur-Candelori">github</a></p>
+        <p>Copyright © 2020 Artur Candelori</p>
     </div>
 </body>
 </html>
