--- a/semana1/portfolio/portfolio.html
+++ b/semana1/portfolio/portfolio.html
@@ -13,11 +13,25 @@
         <a href="contato.html">Contato</a>
     </div>
 
+    <div class="portfolio">
+        <h1>Portfolio</h1>
+        <h2>Projetos:</h2>
+        <h3>Processo seletivo Future4</h3>
+        <a href="./projeto-future4/projeto.html" target="_blank">
+            <img src="projeto-future4/future4.jpg" alt="Future4">
+        </a>
+        <h3>Sistema interno de loja</h3>
+        <a href="../sistema-loja/home.html" target="_blank">
+            <img src="loja-print.png" alt="Sistema de loja">
+        </a>
+    </div>
+
     <div class="rodape">
-        <p>email</p>
-        <p>telefone</p>
-        <p>github</p>
-        <p>copywrite</p>
+
+        <p>artur.candelori@hotmail.com</p>
+        <p>(41)99272-1210</p>
+        <p><a href="https://github.com/future4code/Artur-Candelori">github</a></p>
+        <p>Copyright © 2020 Artur Candelori</p>
     </div>
 </body>
 </html>
