--- a/semana1/portfolio/contato.html
+++ b/semana1/portfolio/contato.html
@@ -12,26 +12,31 @@
         <a href="portfolio.html">Portfolio</a>
         <a href="contato.html">Contato</a>
     </div>
-    <h1>Contato</h1>
 
-    <form>
-        <label for="">Nome</label>
-        <input type="text" name="" id="">
-        <br>
-        <label for="">E-mail</label>
-        <input type="email" name="" id="">
-        <br>
-        <label for="">Digite sua mensagem:</label>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        <br>
-        <button type="submit">ENVIAR</button>
-    </form>
+    <div class="contato">
+        <h1>Contato</h1>
+        <form>
+            <label for="nome">Nome:</label>
+            <br>
+            <input type="text" name="nome" id="nome">
+            <br><br>
+            <label for="email">E-mail:</label>
+            <br>
+            <input type="email" name="email" id="email">
+            <br><br>
+            <label for="mensagem">Digite sua mensagem:</label>
+            <br>
+            <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
+            <br><br>
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
 
     <div class="rodape">
-        <p>email</p>
-        <p>telefone</p>
-        <p>github</p>
-        <p>copywrite</p>
+        <p>artur.candelori@hotmail.com</p>
+        <p>(41)99272-1210</p>
+        <p><a href="https://github.com/future4code/Artur-Candelori">github</a></p>
+        <p>Copyright © 2020 Artur Candelori</p>
     </div>
 </body>
 </html>
